--- a/transformation_manager.ipynb
+++ b/transformation_manager.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "67a5a8b8-337f-4df7-b9c7-716c3ff36529",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,12 @@
     "from docplex.mp.model import Model\n",
     "\n",
     "# SciPy minimizer routine\n",
-    "from scipy.optimize import minimize"
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
+    "from qiskit_ibm_runtime import Estimator, Sampler, Session\n",
+    "from qiskit.result import QuasiDistribution\n",
+    "from qiskit.circuit.library import QAOAAnsatz"
    ]
   },
   {
@@ -30,19 +35,84 @@
     "    in `SparsePauliOp` format\n",
     "    \"\"\"\n",
     "    def __init__(self):\n",
-    "        self.input_type = QuadraticProgram\n",
-    "        self.output_type = SparsePauliOp\n",
+    "        self.input_types = (QuadraticProgram, )\n",
+    "        self.output_types = (SparsePauliOp, )\n",
     "\n",
-    "    def run(self, program):\n",
-    "        if not isinstance(program, self.input_type):\n",
-    "            raise TypeError(f\"Program is invalid input type, must be {self.input_type}\")\n",
+    "    def run(self, program, ansatz = None):\n",
+    "        if not isinstance(program, self.input_types):\n",
+    "            raise TypeError(f\"Program is invalid input type, must be one of {self.input_types}\")\n",
     "        ising, constant = program.to_ising(opflow=False)\n",
     "        return ising + SparsePauliOp.from_list([(\"I\"*ising.num_qubits, constant)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
+   "id": "cbe54067-bad2-4736-8ee0-eb7e9598b182",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class QAOASolver:\n",
+    "    def __init__(self, session, qaoa_reps=2):\n",
+    "        self.input_types = (SparsePauliOp, )\n",
+    "        self.output_types = (QuasiDistribution, )\n",
+    "        self.session = session\n",
+    "        self.qaoa_reps = 2\n",
+    "\n",
+    "    def run(self, hamiltonian):\n",
+    "        ansatz = QAOAAnsatz(hamiltonian, reps=2)\n",
+    "        estimator = Estimator(session=session, options={\"shots\": int(1e4)})\n",
+    "        sampler = Sampler(session=session, options={\"shots\": int(1e4)})\n",
+    "\n",
+    "        def cost_func(params, ansatz, hamiltonian, estimator):\n",
+    "            \"\"\"Return estimate of energy from estimator\n",
+    "        \n",
+    "            Parameters:\n",
+    "                params (ndarray): Array of ansatz parameters\n",
+    "                ansatz (QuantumCircuit): Parameterized ansatz circuit\n",
+    "                hamiltonian (SparsePauliOp): Operator representation of Hamiltonian\n",
+    "                estimator (Estimator): Estimator primitive instance\n",
+    "        \n",
+    "            Returns:\n",
+    "                float: Energy estimate\n",
+    "            \"\"\"\n",
+    "            cost = estimator.run(ansatz, hamiltonian, parameter_values=params).result().values[0]\n",
+    "            return cost\n",
+    "\n",
+    "        x0 = 2 * np.pi * np.random.rand(ansatz.num_parameters)\n",
+    "        res = minimize(cost_func, x0, args=(ansatz, hamiltonian, estimator), method=\"COBYLA\")\n",
+    "        # Assign solution parameters to ansatz\n",
+    "        qc = ansatz.assign_parameters(res.x)\n",
+    "        # Add measurements to our circuit\n",
+    "        qc.measure_all()\n",
+    "        # Sample ansatz at optimal parameters\n",
+    "        samp_dist = sampler.run(qc, shots=int(1e4)).result().quasi_dists[0]\n",
+    "        # Close the session since we are now done with it\n",
+    "        session.close()\n",
+    "        return samp_dist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6dae6af-8c87-4532-b143-1160c3ed99b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4ecdb64d-b886-4ab1-a2ec-d36c21e17115",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "service = QiskitRuntimeService()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "6ae2f316-d81a-4b2e-abda-8bef5889e503",
    "metadata": {},
    "outputs": [],
@@ -52,6 +122,21 @@
     "class CompositeWorkflow:\n",
     "    def __init__(self, passes):\n",
     "        self.passes = passes\n",
+    "        self.input_types = None\n",
+    "        self.output_types = None\n",
+    "        self._validate_passes()\n",
+    "\n",
+    "    def _validate_passes(self):\n",
+    "        self.input_types = self.passes[0].input_types\n",
+    "        input_types = self.passes[0].input_types\n",
+    "        for individual_pass in self.passes:\n",
+    "            temp_input_types = individual_pass.input_types\n",
+    "            if not set(input_types).intersection(set(temp_input_types)):\n",
+    "                raise Exception(f\"{temp_input_types} not compatible with {input_types}\")\n",
+    "            input_types = individual_pass.output_types\n",
+    "        self.output_types = individual_pass.output_types\n",
+    "            \n",
+    "        \n",
     "    \n",
     "    def run(self, input):\n",
     "        temp = copy.deepcopy(input)\n",
@@ -62,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "id": "60e03730-2f3a-48fe-bc50-9d079c11603c",
    "metadata": {},
    "outputs": [],
@@ -77,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "id": "49a33b1f-8262-4171-b71e-f628e8b9c884",
    "metadata": {},
    "outputs": [],
@@ -87,87 +172,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "a41da3bb-bff8-4c8a-90d8-8011e817d4a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cw = CompositeWorkflow([InequalityToEquality(), # Transformation\n",
-    "                        IntegerToBinary(), # Transformation\n",
-    "                        LinearEqualityToPenalty(), # Transformation\n",
-    "                        LinearInequalityToPenalty(), # Transformation\n",
-    "                        QuadraticProgram2Ising() # Conversion\n",
-    "                        ])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "d87b1e0d-829f-441e-aeb3-970c43cff521",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ising = cw.run(qp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "144629f3-746d-4c6f-bc96-3ea9d0db0015",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SparsePauliOp(['IIZ', 'IZI', 'ZII', 'IZZ', 'ZIZ', 'ZZI', 'III'],\n",
-       "              coeffs=[-1.  +0.j,  0.25+0.j, -2.25+0.j,  0.25+0.j,  0.25+0.j,  0.5 +0.j,\n",
-       "  2.  +0.j])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ising"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "2e15b136-a721-4e64-be0b-452088b56519",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from qiskit.circuit.library import QAOAAnsatz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "4dce8043-fde6-4c56-8803-1ff320ff0c3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
-    "from qiskit_ibm_runtime import Estimator, Sampler, Session"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "4ecdb64d-b886-4ab1-a2ec-d36c21e17115",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "service = QiskitRuntimeService()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "6704e4a9-dda1-473b-abf3-9624f3d72d77",
+   "execution_count": 43,
+   "id": "3e136c81-0098-46ea-9038-daecaa6949ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,122 +182,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "7cbea35a-7deb-4b5d-8945-0a812aa34787",
+   "execution_count": 44,
+   "id": "564152b2-fb12-4ceb-90c6-880ecd1043ae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ansatz = QAOAAnsatz(ising, reps=2)"
+    "session = Session(backend=backend)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "26566d12-761b-4714-b9c9-dbacd7ddc89c",
+   "execution_count": 45,
+   "id": "a41da3bb-bff8-4c8a-90d8-8011e817d4a2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cost_func(params, ansatz, hamiltonian, estimator):\n",
-    "    \"\"\"Return estimate of energy from estimator\n",
-    "\n",
-    "    Parameters:\n",
-    "        params (ndarray): Array of ansatz parameters\n",
-    "        ansatz (QuantumCircuit): Parameterized ansatz circuit\n",
-    "        hamiltonian (SparsePauliOp): Operator representation of Hamiltonian\n",
-    "        estimator (Estimator): Estimator primitive instance\n",
-    "\n",
-    "    Returns:\n",
-    "        float: Energy estimate\n",
-    "    \"\"\"\n",
-    "    cost = estimator.run(ansatz, hamiltonian, parameter_values=params).result().values[0]\n",
-    "    return cost\n"
+    "cw = CompositeWorkflow([InequalityToEquality(), # Transformation\n",
+    "                        IntegerToBinary(), # Transformation\n",
+    "                        LinearEqualityToPenalty(), # Transformation\n",
+    "                        LinearInequalityToPenalty(), # Transformation\n",
+    "                        QuadraticProgram2Ising(), # Conversion\n",
+    "                        QAOASolver(session) # Execute\n",
+    "                        ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "255a9649-1917-4def-b415-2139d860e1cc",
+   "execution_count": 47,
+   "id": "4b50fb46-d72f-42bc-9589-8dc9b37fca4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(qiskit_optimization.problems.quadratic_program.QuadraticProgram,)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "session = Session(backend=backend)\n",
-    "\n",
-    "estimator = Estimator(session=session, options={\"shots\": int(1e4)})\n",
-    "sampler = Sampler(session=session, options={\"shots\": int(1e4)})\n"
+    "cw.input_types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "a3737419-9c9e-420c-912b-1d9bbbaa8e46",
+   "execution_count": 46,
+   "id": "710723a5-9c7f-45b0-8fbe-2544084414cb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(qiskit.result.distributions.quasi.QuasiDistribution,)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x0 = 2 * np.pi * np.random.rand(ansatz.num_parameters)"
+    "cw.output_types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6817d337-818a-49fb-bd17-6bf4112d5b80",
+   "execution_count": 26,
+   "id": "d87b1e0d-829f-441e-aeb3-970c43cff521",
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = minimize(cost_func, x0, args=(ansatz, ising, estimator), method=\"COBYLA\")"
+    "dist = cw.run(qp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7d051613-3674-4353-82ae-9869d8bbd548",
+   "execution_count": 31,
+   "id": "2e15b136-a721-4e64-be0b-452088b56519",
    "metadata": {},
    "outputs": [],
    "source": [
-    "res"
+    "a = ('a', 5)\n",
+    "b = ('b', 6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4f3cce37-3ecb-4a50-8617-ae1c6842fc98",
+   "execution_count": 32,
+   "id": "642dbe37-b1ea-418a-b376-0250214828ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Assign solution parameters to ansatz\n",
-    "qc = ansatz.assign_parameters(res.x)\n",
-    "# Add measurements to our circuit\n",
-    "qc.measure_all()\n"
+    "set(a).intersection(set(b))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1f240802-d391-4254-84e5-e5808fa44227",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sample ansatz at optimal parameters\n",
-    "samp_dist = sampler.run(qc, shots=int(1e4)).result().quasi_dists[0]\n",
-    "# Close the session since we are now done with it\n",
-    "session.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f66661b-5d2c-44df-bd57-91fab71fff5a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "samp_dist"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "aed58f2e-0761-441f-aeea-793adeabc63a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'001': 0.1339,\n",
+       " '010': 0.3567,\n",
+       " '110': 0.0831,\n",
+       " '100': 0.1329,\n",
+       " '111': 0.0416,\n",
+       " '000': 0.1107,\n",
+       " '011': 0.1198,\n",
+       " '101': 0.0213}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "probs = samp_dist.binary_probabilities()\n",
     "probs"
@@ -299,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 25,
    "id": "dda90ad4-43f2-49e9-ba3e-fb5df7a95e48",
    "metadata": {},
    "outputs": [],
@@ -321,19 +343,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 26,
    "id": "19e6dc53-314c-40a1-9f33-6132e4a4983a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[5.0, 1.0, -2.0, 3.0, 3.0, 0.0, 0.0, 6.0]"
-      ]
-     },
-     "execution_count": 357,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'qubo' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m results \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m bitstring \u001b[38;5;129;01min\u001b[39;00m probs:\n\u001b[0;32m----> 3\u001b[0m     results\u001b[38;5;241m.\u001b[39mappend(evaluate_quadratic_program(bitstring, \u001b[43mqubo\u001b[49m))\n\u001b[1;32m      5\u001b[0m results\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'qubo' is not defined"
+     ]
     }
    ],
    "source": [
