--- a/transformation_manager.ipynb
+++ b/transformation_manager.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "67a5a8b8-337f-4df7-b9c7-716c3ff36529",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,7 @@
     "from qiskit_optimization import QuadraticProgram\n",
     "from qiskit.quantum_info import SparsePauliOp\n",
     "from qiskit_optimization.converters import (InequalityToEquality, IntegerToBinary, \n",
-    "                                            LinearEqualityToPenalty, LinearInequalityToPenalty)\n",
+    "                                            LinearEqualityToPenalty, LinearInequalityToPenalty, MaximizeToMinimize)\n",
     "from docplex.mp.model import Model\n",
     "\n",
     "# SciPy minimizer routine\n",
@@ -26,6 +26,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "4ecdb64d-b886-4ab1-a2ec-d36c21e17115",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#service = QiskitRuntimeService()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "id": "08d414af-099d-4ad4-bdf7-fb9dd85619b3",
    "metadata": {},
    "outputs": [],
@@ -47,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "id": "cbe54067-bad2-4736-8ee0-eb7e9598b182",
    "metadata": {},
    "outputs": [],
@@ -94,36 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c6dae6af-8c87-4532-b143-1160c3ed99b8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "4ecdb64d-b886-4ab1-a2ec-d36c21e17115",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "service = QiskitRuntimeService()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "id": "6ae2f316-d81a-4b2e-abda-8bef5889e503",
    "metadata": {},
    "outputs": [],
    "source": [
     "import copy\n",
+    "import warnings\n",
     "\n",
     "class CompositeWorkflow:\n",
     "    def __init__(self, passes):\n",
     "        self.passes = passes\n",
     "        self.input_types = None\n",
     "        self.output_types = None\n",
+    "        self.strict_validation = True\n",
     "        self._validate_passes()\n",
     "\n",
     "    def _validate_passes(self):\n",
@@ -131,10 +125,15 @@
     "        input_types = self.passes[0].input_types\n",
     "        for individual_pass in self.passes:\n",
     "            temp_input_types = individual_pass.input_types\n",
-    "            if not set(input_types).intersection(set(temp_input_types)):\n",
+    "            input_overlap = set(input_types).intersection(set(temp_input_types))\n",
+    "            if not input_overlap:\n",
     "                raise Exception(f\"{temp_input_types} not compatible with {input_types}\")\n",
+    "            if len(input_overlap) != len(temp_input_types) and self.strict_validation:\n",
+    "                self.strict_validation = False\n",
     "            input_types = individual_pass.output_types\n",
     "        self.output_types = individual_pass.output_types\n",
+    "        if not self.strict_validation:\n",
+    "            warnings.warn('CompositeWorkflow is only weakly validated')\n",
     "            \n",
     "        \n",
     "    \n",
@@ -147,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "id": "60e03730-2f3a-48fe-bc50-9d079c11603c",
    "metadata": {},
    "outputs": [],
@@ -162,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "id": "49a33b1f-8262-4171-b71e-f628e8b9c884",
    "metadata": {},
    "outputs": [],
@@ -172,27 +171,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "id": "3e136c81-0098-46ea-9038-daecaa6949ff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "backend = service.get_backend('ibmq_qasm_simulator')"
+    "#backend = service.get_backend('ibmq_qasm_simulator')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "id": "564152b2-fb12-4ceb-90c6-880ecd1043ae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "session = Session(backend=backend)"
+    "#session = Session(backend=backend)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "id": "a41da3bb-bff8-4c8a-90d8-8011e817d4a2",
    "metadata": {},
    "outputs": [],
@@ -201,14 +200,15 @@
     "                        IntegerToBinary(), # Transformation\n",
     "                        LinearEqualityToPenalty(), # Transformation\n",
     "                        LinearInequalityToPenalty(), # Transformation\n",
-    "                        QuadraticProgram2Ising(), # Conversion\n",
-    "                        QAOASolver(session) # Execute\n",
+    "                        MaximizeToMinimize(), # Transformation\n",
+    "                        #QuadraticProgram2Ising(), # Conversion\n",
+    "                        #QAOASolver(session) # Execute\n",
     "                        ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 30,
    "id": "4b50fb46-d72f-42bc-9589-8dc9b37fca4e",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
        "(qiskit_optimization.problems.quadratic_program.QuadraticProgram,)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,17 +229,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "id": "710723a5-9c7f-45b0-8fbe-2544084414cb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(qiskit.result.distributions.quasi.QuasiDistribution,)"
+       "(qiskit_optimization.problems.quadratic_program.QuadraticProgram,)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,78 +250,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "d87b1e0d-829f-441e-aeb3-970c43cff521",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dist = cw.run(qp)"
+    "qubo = cw.run(qp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "2e15b136-a721-4e64-be0b-452088b56519",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = ('a', 5)\n",
-    "b = ('b', 6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "642dbe37-b1ea-418a-b376-0250214828ad",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "set()"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set(a).intersection(set(b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "aed58f2e-0761-441f-aeea-793adeabc63a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'001': 0.1339,\n",
-       " '010': 0.3567,\n",
-       " '110': 0.0831,\n",
-       " '100': 0.1329,\n",
-       " '111': 0.0416,\n",
-       " '000': 0.1107,\n",
-       " '011': 0.1198,\n",
-       " '101': 0.0213}"
+       "<QuadraticProgram: minimize x*y + x*z + 2*y*z + x - 2*y + 3*z, 3 variables, 0 constraints, 'docplex model'>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "probs = samp_dist.binary_probabilities()\n",
-    "probs"
+    "qubo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "dda90ad4-43f2-49e9-ba3e-fb5df7a95e48",
    "metadata": {},
    "outputs": [],
@@ -331,6 +291,7 @@
     "    linear_elements = program.objective.linear.to_dict()\n",
     "    quadratic_elements = program.objective._quadratic.to_dict()\n",
     "\n",
+    "    # Flip string so 0th bit is 0th array element for easy math\n",
     "    x = np.fromiter(list(bitstring[::-1]), dtype=int)\n",
     "    \n",
     "    sum = constant\n",
